--- a/kafka-twitter-producer/pom.xml
+++ b/kafka-twitter-producer/pom.xml
@@ -6,7 +6,9 @@
 
     <groupId>org.example</groupId>
     <artifactId>kafka-twitter</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -37,7 +39,7 @@
             <version>3.8.1</version>
         </dependency>
 
-<!--        twitter client-->
+        <!--        twitter client-->
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
